2007-07-11  Christian Persch  <chpe@gnome.org>

	* data/default-prefs-common.js:

	Use the right prefs to disable CUPS.

2007-07-11  Luca Ferretti  <elle.uca@libero.it>

	* data/chrome/about.xhtml:

	Use new "epiphany" icon here (thanks to Rodney Dawes).
	
	* data/icons/32x32/apps/Makefile.am:
	* data/icons/32x32/apps/epiphany.svg:
	* data/icons/32x32/apps/epiphany.svg:

	Add 32x32 pixel icon (thanks to Andreas Nilsson).

2007-07-11  Christian Persch  <chpe@gnome.org>

	* configure.ac:

	Update glib req to 2.13.4 so we can use g_get_user_special_dir.

	* lib/ephy-file-helpers.c: (ephy_file_downloads_dir),
	(ephy_file_desktop_dir): 

	Use g_get_user_special_dir to get the Desktop and Downloads directory
	location.

2007-07-10  Christian Persch  <chpe@gnome.org>

	* src/bookmarks/ephy-bookmark-action.c: (connect_proxy):

	Use gtk_widget_set_has_tooltip here.

2007-07-10  Christian Persch  <chpe@gnome.org>

	* embed/ephy-embed-shell.c: (ephy_embed_shell_set_page_setup),
	(ephy_embed_shell_get_page_setup),
	(ephy_embed_shell_set_print_settings),
	(ephy_embed_shell_get_print_settings):
	* lib/ephy-print-utils.c:
	* lib/ephy-print-utils.h:

	Use the new gtk functions to persist and load the print settings and
	page setup. Migrate our old settings, if present.

2007-07-10  Christian Persch  <chpe@gnome.org>

	* src/ephy-notebook.c: (sync_label):

	Remove NULL-check here.

2007-07-10  Christian Persch  <chpe@gnome.org>

	* src/bookmarks/ephy-bookmark-action.c: (query_tooltip_cb),
	(connect_proxy), (ephy_bookmark_action_updated),
	(ephy_bookmark_action_class_init):

	Port to new tooltips API. Fixes bug #347637.

2007-07-10  Christian Persch  <chpe@gnome.org>

	* embed/mozilla/GeckoPrintService.cpp:

        Remove gtk version check since we now depend on 2.11.

2007-07-10  Christian Persch  <chpe@gnome.org>

	* lib/widgets/ephy-location-entry.c: (cursor_on_match_cb),
	(ephy_location_entry_set_completion):

	Remove gtk version check since we now depend on 2.11.
