@@ -1,9 +1,16 @@
+2007-07-11  Nguyễn Thái Ngọc Duy <pclouds@gmail.com>
+
+	* embed/mozilla/MozDownload.cpp:
+
+	Fixes bug #452707
+
 2007-07-11  Christian Persch  <chpe@gnome.org>
 
 	* data/default-prefs-common.js:
 
 	Use the right prefs to disable CUPS.
 
+>>>>>>> .r7150
 2007-07-11  Luca Ferretti  <elle.uca@libero.it>
 
 	* data/chrome/about.xhtml:
